--- a/blog-server/views/post.ejs
+++ b/blog-server/views/post.ejs
@@ -7,8 +7,8 @@ postid: <%=postid%> <br>
 username: <%=username%> <br>
 created: <%=created%> <br>
 modified: <%=modified%> <br>
-title: <%=title%> <br>
-body: <%=body%><br>
+title: <%-title%> <br>
+body: <%-body%><br>
 
 
 </div>
